# ship-6502

./: .gitignore  Cargo.toml  README.md
assets/models/commodore_pet_2001/: license.txt  scene.gltf
design-decisions/: 2024-08-04_6502-emulation.md  2024-08-12_virtual-computer.md
src/: computer.rs  core.rs  hud.rs  interaction.rs  main.rs  player.rs
src/computer/: ibm_byte_map.rs  internals.rs  os.rs  ship_os.rs  terminal.rs
src/core/: system_sets.rs
