[package]
name = "ship_6502"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.14.1"
buffer-graphics-lib = "0.18.0"
byteorder = "1.5.0"
image = "0.25.2"
mos6502 = "0.6.0"
tao = "0.20"

# Optimisations recommended by Bevy: https://bevyengine.org/learn/quick-start/getting-started/setup/#compile-with-performance-optimizations
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
