[package]
name = "ship_6502"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array2d = "0.3.2"
bevy = { version = "0.14.1", features = ["jpeg"] }
bevy_mod_outline = "0.8.2"
bevy_mod_raycast = "0.18.0"

# Optimisations recommended by Bevy: https://bevyengine.org/learn/quick-start/getting-started/setup/#compile-with-performance-optimizations
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
